@@ -1,3 +1,10 @@
+2008-01-25  Alexander Larsson  <alexl@redhat.com>
+
+        * gdesktopappinfo.c:
+	Don't make local copy of desktop file
+	for mimetype changes if the file already
+	supports the new mimetype.
+
 2008-01-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* ginputstream.c:
